--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     </head>
     <body>
         
-        <polymer-element name="headline" noscript>
+        <polymer-element name="funk" noscript>
             <template>
                 <h1>Hello this is a test</h1>
             </template>
         </polymer-element>
 
-        <headline></headline>
+        <funk></funk>
 
     </body>
 </html>
